Entrega_2/reentrega/y.output
Terminals unused in grammar

   DIGITO
   LETRA
   LETRA_MINUS
   LETRA_MAYUS
   CARACTER
   LLAVE_I
   LLAVE_F
   COMENTARIO_I
   COMENTARIO_F
   COMP_MAYOR_ESTR
   COMP_MENOR_ESTR
   COMP_MAYOR_IGUAL
   COMP_MENOR_IGUAL
   COMP_IGUAL
   COMP_DIST


Gramática

    0 $accept: start $end

    1 start: programa

    2 $@1: /* vacío */

    3 programa: INICIO_PROGRAMA $@1 bloque FIN_PROGRAMA

    4 bloque: lista_sentencias

    5 lista_sentencias: sentencia
    6                 | lista_sentencias sentencia

    7 sentencia: bloque_declaracion
    8          | asignacion
    9          | lectura
   10          | escritura
   11          | iteracion
   12          | seleccion
   13          | COMENTARIO

   14 $@2: /* vacío */

   15 asignacion: ID $@2 OP_ASIG expresion

   16 $@3: /* vacío */

   17 $@4: /* vacío */

   18 $@5: /* vacío */

   19 iteracion: WHILE PARENTESIS_I condicion $@3 PARENTESIS_F $@4 DO bloque $@5 ENDWHILE

   20 $@6: /* vacío */

   21 $@7: /* vacío */

   22 seleccion: IF $@6 PARENTESIS_I condicion PARENTESIS_F $@7 DO resto ENDIF

   23 condicion: comparacion

   24 $@8: /* vacío */

   25 condicion: comparacion and_or $@8 comparacion
   26          | OP_NOT comparacion
   27          | between
   28          | inlist

   29 and_or: OP_AND
   30       | OP_OR

   31 comparacion: expresion COMPARADOR expresion

   32 resto: bloque

   33 $@9: /* vacío */

   34 $@10: /* vacío */

   35 resto: bloque $@9 ELSE $@10 bloque

   36 $@11: /* vacío */

   37 $@12: /* vacío */

   38 $@13: /* vacío */

   39 $@14: /* vacío */

   40 resto: bloque $@11 ELSIF $@12 PARENTESIS_I condicion PARENTESIS_F $@13 bloque ELSE $@14 bloque

   41 lectura: READ ID

   42 escritura: WRITE ID
   43          | WRITE CTE_STRING

   44 $@15: /* vacío */

   45 bloque_declaracion: DECVAR $@15 declaraciones ENDDEC

   46 declaraciones: declaraciones lista_id_y_tipo
   47              | lista_id_y_tipo

   48 lista_id_y_tipo: var_dec COMA lista_id_y_tipo
   49                | var_dec OP_DEC tipodato

   50 var_dec: ID

   51 $@16: /* vacío */

   52 $@17: /* vacío */

   53 var_dec: ID $@16 PARENTESIS_I CTE_INT $@17 PARENTESIS_F

   54 tipodato: INTEGER
   55         | FLOAT
   56         | STRING

   57 $@18: /* vacío */

   58 expresion: expresion OP_SUM $@18 termino

   59 $@19: /* vacío */

   60 expresion: expresion OP_REST $@19 termino
   61          | termino

   62 $@20: /* vacío */

   63 termino: termino OP_MULT $@20 factor

   64 $@21: /* vacío */

   65 termino: termino OP_DIV $@21 factor
   66        | factor

   67 factor: CTE_INT
   68       | CTE_FLOAT
   69       | CTE_STRING
   70       | ID
   71       | PARENTESIS_I expresion PARENTESIS_F

   72 $@22: /* vacío */

   73 $@23: /* vacío */

   74 between: BETWEEN $@22 PARENTESIS_I ID $@23 COMA rango PARENTESIS_F

   75 rango: CORCHETE_I expresion PUNTO_Y_COMA expresion CORCHETE_F

   76 $@24: /* vacío */

   77 $@25: /* vacío */

   78 inlist: INLIST $@24 PARENTESIS_I ID $@25 PUNTO_Y_COMA lista_expresiones PARENTESIS_F

   79 lista_expresiones: CORCHETE_I expresiones CORCHETE_F

   80 expresiones: expresion
   81            | expresion PUNTO_Y_COMA expresiones


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
DIGITO (258)
LETRA (259)
LETRA_MINUS (260)
LETRA_MAYUS (261)
CARACTER (262)
CTE_INT (263) 53 67
CTE_FLOAT (264) 68
CTE_STRING (265) 43 69
ID (266) 15 41 42 50 53 70 74 78
INICIO_PROGRAMA (267) 3
FIN_PROGRAMA (268) 3
OP_SUM (269) 58
OP_REST (270) 60
OP_MULT (271) 63
OP_DIV (272) 65
OP_ASIG (273) 15
OP_DEC (274) 49
OP_AND (275) 29
OP_OR (276) 30
OP_NOT (277) 26
COMPARADOR (278) 31
PARENTESIS_I (279) 19 22 40 53 71 74 78
PARENTESIS_F (280) 19 22 40 53 71 74 78
LLAVE_I (281)
LLAVE_F (282)
CORCHETE_I (283) 75 79
CORCHETE_F (284) 75 79
COMENTARIO_I (285)
COMENTARIO_F (286)
PUNTO_Y_COMA (287) 75 78 81
COMA (288) 48 74
COMP_MAYOR_ESTR (289)
COMP_MENOR_ESTR (290)
COMP_MAYOR_IGUAL (291)
COMP_MENOR_IGUAL (292)
COMP_IGUAL (293)
COMP_DIST (294)
DECVAR (295) 45
ENDDEC (296) 45
WHILE (297) 19
ENDWHILE (298) 19
DO (299) 19 22
IF (300) 22
ELSE (301) 35 40
ELSIF (302) 40
ENDIF (303) 22
INTEGER (304) 54
FLOAT (305) 55
STRING (306) 56
READ (307) 41
WRITE (308) 42 43
BETWEEN (309) 74
INLIST (310) 78
COMENTARIO (311) 13


No terminales con las reglas donde aparecen

$accept (57)
    en la izquierda: 0
start (58)
    en la izquierda: 1, en la derecha: 0
programa (59)
    en la izquierda: 3, en la derecha: 1
$@1 (60)
    en la izquierda: 2, en la derecha: 3
bloque (61)
    en la izquierda: 4, en la derecha: 3 19 32 35 40
lista_sentencias (62)
    en la izquierda: 5 6, en la derecha: 4 6
sentencia (63)
    en la izquierda: 7 8 9 10 11 12 13, en la derecha: 5 6
asignacion (64)
    en la izquierda: 15, en la derecha: 8
$@2 (65)
    en la izquierda: 14, en la derecha: 15
iteracion (66)
    en la izquierda: 19, en la derecha: 11
$@3 (67)
    en la izquierda: 16, en la derecha: 19
$@4 (68)
    en la izquierda: 17, en la derecha: 19
$@5 (69)
    en la izquierda: 18, en la derecha: 19
seleccion (70)
    en la izquierda: 22, en la derecha: 12
$@6 (71)
    en la izquierda: 20, en la derecha: 22
$@7 (72)
    en la izquierda: 21, en la derecha: 22
condicion (73)
    en la izquierda: 23 25 26 27 28, en la derecha: 19 22 40
$@8 (74)
    en la izquierda: 24, en la derecha: 25
and_or (75)
    en la izquierda: 29 30, en la derecha: 25
comparacion (76)
    en la izquierda: 31, en la derecha: 23 25 26
resto (77)
    en la izquierda: 32 35 40, en la derecha: 22
$@9 (78)
    en la izquierda: 33, en la derecha: 35
$@10 (79)
    en la izquierda: 34, en la derecha: 35
$@11 (80)
    en la izquierda: 36, en la derecha: 40
$@12 (81)
    en la izquierda: 37, en la derecha: 40
$@13 (82)
    en la izquierda: 38, en la derecha: 40
$@14 (83)
    en la izquierda: 39, en la derecha: 40
lectura (84)
    en la izquierda: 41, en la derecha: 9
escritura (85)
    en la izquierda: 42 43, en la derecha: 10
bloque_declaracion (86)
    en la izquierda: 45, en la derecha: 7
$@15 (87)
    en la izquierda: 44, en la derecha: 45
declaraciones (88)
    en la izquierda: 46 47, en la derecha: 45 46
lista_id_y_tipo (89)
    en la izquierda: 48 49, en la derecha: 46 47 48
var_dec (90)
    en la izquierda: 50 53, en la derecha: 48 49
$@16 (91)
    en la izquierda: 51, en la derecha: 53
$@17 (92)
    en la izquierda: 52, en la derecha: 53
tipodato (93)
    en la izquierda: 54 55 56, en la derecha: 49
expresion (94)
    en la izquierda: 58 60 61, en la derecha: 15 31 58 60 71 75 80
    81
$@18 (95)
    en la izquierda: 57, en la derecha: 58
$@19 (96)
    en la izquierda: 59, en la derecha: 60
termino (97)
    en la izquierda: 63 65 66, en la derecha: 58 60 61 63 65
$@20 (98)
    en la izquierda: 62, en la derecha: 63
$@21 (99)
    en la izquierda: 64, en la derecha: 65
factor (100)
    en la izquierda: 67 68 69 70 71, en la derecha: 63 65 66
between (101)
    en la izquierda: 74, en la derecha: 27
$@22 (102)
    en la izquierda: 72, en la derecha: 74
$@23 (103)
    en la izquierda: 73, en la derecha: 74
rango (104)
    en la izquierda: 75, en la derecha: 74
inlist (105)
    en la izquierda: 78, en la derecha: 28
$@24 (106)
    en la izquierda: 76, en la derecha: 78
$@25 (107)
    en la izquierda: 77, en la derecha: 78
lista_expresiones (108)
    en la izquierda: 79, en la derecha: 78
expresiones (109)
    en la izquierda: 80 81, en la derecha: 79 81


estado 0

    0 $accept: . start $end

    INICIO_PROGRAMA  desplazar e ir al estado 1

    start     ir al estado 2
    programa  ir al estado 3


estado 1

    3 programa: INICIO_PROGRAMA . $@1 bloque FIN_PROGRAMA

    $default  reduce usando la regla 2 ($@1)

    $@1  ir al estado 4


estado 2

    0 $accept: start . $end

    $end  desplazar e ir al estado 5


estado 3

    1 start: programa .

    $default  reduce usando la regla 1 (start)


estado 4

    3 programa: INICIO_PROGRAMA $@1 . bloque FIN_PROGRAMA

    ID          desplazar e ir al estado 6
    DECVAR      desplazar e ir al estado 7
    WHILE       desplazar e ir al estado 8
    IF          desplazar e ir al estado 9
    READ        desplazar e ir al estado 10
    WRITE       desplazar e ir al estado 11
    COMENTARIO  desplazar e ir al estado 12

    bloque              ir al estado 13
    lista_sentencias    ir al estado 14
    sentencia           ir al estado 15
    asignacion          ir al estado 16
    iteracion           ir al estado 17
    seleccion           ir al estado 18
    lectura             ir al estado 19
    escritura           ir al estado 20
    bloque_declaracion  ir al estado 21


estado 5

    0 $accept: start $end .

    $default  aceptar


estado 6

   15 asignacion: ID . $@2 OP_ASIG expresion

    $default  reduce usando la regla 14 ($@2)

    $@2  ir al estado 22


estado 7

   45 bloque_declaracion: DECVAR . $@15 declaraciones ENDDEC

    $default  reduce usando la regla 44 ($@15)

    $@15  ir al estado 23


estado 8

   19 iteracion: WHILE . PARENTESIS_I condicion $@3 PARENTESIS_F $@4 DO bloque $@5 ENDWHILE

    PARENTESIS_I  desplazar e ir al estado 24


estado 9

   22 seleccion: IF . $@6 PARENTESIS_I condicion PARENTESIS_F $@7 DO resto ENDIF

    $default  reduce usando la regla 20 ($@6)

    $@6  ir al estado 25


estado 10

   41 lectura: READ . ID

    ID  desplazar e ir al estado 26


estado 11

   42 escritura: WRITE . ID
   43          | WRITE . CTE_STRING

    CTE_STRING  desplazar e ir al estado 27
    ID          desplazar e ir al estado 28


estado 12

   13 sentencia: COMENTARIO .

    $default  reduce usando la regla 13 (sentencia)


estado 13

    3 programa: INICIO_PROGRAMA $@1 bloque . FIN_PROGRAMA

    FIN_PROGRAMA  desplazar e ir al estado 29


estado 14

    4 bloque: lista_sentencias .
    6 lista_sentencias: lista_sentencias . sentencia

    ID          desplazar e ir al estado 6
    DECVAR      desplazar e ir al estado 7
    WHILE       desplazar e ir al estado 8
    IF          desplazar e ir al estado 9
    READ        desplazar e ir al estado 10
    WRITE       desplazar e ir al estado 11
    COMENTARIO  desplazar e ir al estado 12

    $default  reduce usando la regla 4 (bloque)

    sentencia           ir al estado 30
    asignacion          ir al estado 16
    iteracion           ir al estado 17
    seleccion           ir al estado 18
    lectura             ir al estado 19
    escritura           ir al estado 20
    bloque_declaracion  ir al estado 21


estado 15

    5 lista_sentencias: sentencia .

    $default  reduce usando la regla 5 (lista_sentencias)


estado 16

    8 sentencia: asignacion .

    $default  reduce usando la regla 8 (sentencia)


estado 17

   11 sentencia: iteracion .

    $default  reduce usando la regla 11 (sentencia)


estado 18

   12 sentencia: seleccion .

    $default  reduce usando la regla 12 (sentencia)


estado 19

    9 sentencia: lectura .

    $default  reduce usando la regla 9 (sentencia)


estado 20

   10 sentencia: escritura .

    $default  reduce usando la regla 10 (sentencia)


estado 21

    7 sentencia: bloque_declaracion .

    $default  reduce usando la regla 7 (sentencia)


estado 22

   15 asignacion: ID $@2 . OP_ASIG expresion

    OP_ASIG  desplazar e ir al estado 31


estado 23

   45 bloque_declaracion: DECVAR $@15 . declaraciones ENDDEC

    ID  desplazar e ir al estado 32

    declaraciones    ir al estado 33
    lista_id_y_tipo  ir al estado 34
    var_dec          ir al estado 35


estado 24

   19 iteracion: WHILE PARENTESIS_I . condicion $@3 PARENTESIS_F $@4 DO bloque $@5 ENDWHILE

    CTE_INT       desplazar e ir al estado 36
    CTE_FLOAT     desplazar e ir al estado 37
    CTE_STRING    desplazar e ir al estado 38
    ID            desplazar e ir al estado 39
    OP_NOT        desplazar e ir al estado 40
    PARENTESIS_I  desplazar e ir al estado 41
    BETWEEN       desplazar e ir al estado 42
    INLIST        desplazar e ir al estado 43

    condicion    ir al estado 44
    comparacion  ir al estado 45
    expresion    ir al estado 46
    termino      ir al estado 47
    factor       ir al estado 48
    between      ir al estado 49
    inlist       ir al estado 50


estado 25

   22 seleccion: IF $@6 . PARENTESIS_I condicion PARENTESIS_F $@7 DO resto ENDIF

    PARENTESIS_I  desplazar e ir al estado 51


estado 26

   41 lectura: READ ID .

    $default  reduce usando la regla 41 (lectura)


estado 27

   43 escritura: WRITE CTE_STRING .

    $default  reduce usando la regla 43 (escritura)


estado 28

   42 escritura: WRITE ID .

    $default  reduce usando la regla 42 (escritura)


estado 29

    3 programa: INICIO_PROGRAMA $@1 bloque FIN_PROGRAMA .

    $default  reduce usando la regla 3 (programa)


estado 30

    6 lista_sentencias: lista_sentencias sentencia .

    $default  reduce usando la regla 6 (lista_sentencias)


estado 31

   15 asignacion: ID $@2 OP_ASIG . expresion

    CTE_INT       desplazar e ir al estado 36
    CTE_FLOAT     desplazar e ir al estado 37
    CTE_STRING    desplazar e ir al estado 38
    ID            desplazar e ir al estado 39
    PARENTESIS_I  desplazar e ir al estado 41

    expresion  ir al estado 52
    termino    ir al estado 47
    factor     ir al estado 48


estado 32

   50 var_dec: ID .
   53        | ID . $@16 PARENTESIS_I CTE_INT $@17 PARENTESIS_F

    PARENTESIS_I  reduce usando la regla 51 ($@16)
    $default      reduce usando la regla 50 (var_dec)

    $@16  ir al estado 53


estado 33

   45 bloque_declaracion: DECVAR $@15 declaraciones . ENDDEC
   46 declaraciones: declaraciones . lista_id_y_tipo

    ID      desplazar e ir al estado 32
    ENDDEC  desplazar e ir al estado 54

    lista_id_y_tipo  ir al estado 55
    var_dec          ir al estado 35


estado 34

   47 declaraciones: lista_id_y_tipo .

    $default  reduce usando la regla 47 (declaraciones)


estado 35

   48 lista_id_y_tipo: var_dec . COMA lista_id_y_tipo
   49                | var_dec . OP_DEC tipodato

    OP_DEC  desplazar e ir al estado 56
    COMA    desplazar e ir al estado 57


estado 36

   67 factor: CTE_INT .

    $default  reduce usando la regla 67 (factor)


estado 37

   68 factor: CTE_FLOAT .

    $default  reduce usando la regla 68 (factor)


estado 38

   69 factor: CTE_STRING .

    $default  reduce usando la regla 69 (factor)


estado 39

   70 factor: ID .

    $default  reduce usando la regla 70 (factor)


estado 40

   26 condicion: OP_NOT . comparacion

    CTE_INT       desplazar e ir al estado 36
    CTE_FLOAT     desplazar e ir al estado 37
    CTE_STRING    desplazar e ir al estado 38
    ID            desplazar e ir al estado 39
    PARENTESIS_I  desplazar e ir al estado 41

    comparacion  ir al estado 58
    expresion    ir al estado 46
    termino      ir al estado 47
    factor       ir al estado 48


estado 41

   71 factor: PARENTESIS_I . expresion PARENTESIS_F

    CTE_INT       desplazar e ir al estado 36
    CTE_FLOAT     desplazar e ir al estado 37
    CTE_STRING    desplazar e ir al estado 38
    ID            desplazar e ir al estado 39
    PARENTESIS_I  desplazar e ir al estado 41

    expresion  ir al estado 59
    termino    ir al estado 47
    factor     ir al estado 48


estado 42

   74 between: BETWEEN . $@22 PARENTESIS_I ID $@23 COMA rango PARENTESIS_F

    $default  reduce usando la regla 72 ($@22)

    $@22  ir al estado 60


estado 43

   78 inlist: INLIST . $@24 PARENTESIS_I ID $@25 PUNTO_Y_COMA lista_expresiones PARENTESIS_F

    $default  reduce usando la regla 76 ($@24)

    $@24  ir al estado 61


estado 44

   19 iteracion: WHILE PARENTESIS_I condicion . $@3 PARENTESIS_F $@4 DO bloque $@5 ENDWHILE

    $default  reduce usando la regla 16 ($@3)

    $@3  ir al estado 62


estado 45

   23 condicion: comparacion .
   25          | comparacion . and_or $@8 comparacion

    OP_AND  desplazar e ir al estado 63
    OP_OR   desplazar e ir al estado 64

    $default  reduce usando la regla 23 (condicion)

    and_or  ir al estado 65


estado 46

   31 comparacion: expresion . COMPARADOR expresion
   58 expresion: expresion . OP_SUM $@18 termino
   60          | expresion . OP_REST $@19 termino

    OP_SUM      desplazar e ir al estado 66
    OP_REST     desplazar e ir al estado 67
    COMPARADOR  desplazar e ir al estado 68


estado 47

   61 expresion: termino .
   63 termino: termino . OP_MULT $@20 factor
   65        | termino . OP_DIV $@21 factor

    OP_MULT  desplazar e ir al estado 69
    OP_DIV   desplazar e ir al estado 70

    $default  reduce usando la regla 61 (expresion)


estado 48

   66 termino: factor .

    $default  reduce usando la regla 66 (termino)


estado 49

   27 condicion: between .

    $default  reduce usando la regla 27 (condicion)


estado 50

   28 condicion: inlist .

    $default  reduce usando la regla 28 (condicion)


estado 51

   22 seleccion: IF $@6 PARENTESIS_I . condicion PARENTESIS_F $@7 DO resto ENDIF

    CTE_INT       desplazar e ir al estado 36
    CTE_FLOAT     desplazar e ir al estado 37
    CTE_STRING    desplazar e ir al estado 38
    ID            desplazar e ir al estado 39
    OP_NOT        desplazar e ir al estado 40
    PARENTESIS_I  desplazar e ir al estado 41
    BETWEEN       desplazar e ir al estado 42
    INLIST        desplazar e ir al estado 43

    condicion    ir al estado 71
    comparacion  ir al estado 45
    expresion    ir al estado 46
    termino      ir al estado 47
    factor       ir al estado 48
    between      ir al estado 49
    inlist       ir al estado 50


estado 52

   15 asignacion: ID $@2 OP_ASIG expresion .
   58 expresion: expresion . OP_SUM $@18 termino
   60          | expresion . OP_REST $@19 termino

    OP_SUM   desplazar e ir al estado 66
    OP_REST  desplazar e ir al estado 67

    $default  reduce usando la regla 15 (asignacion)


estado 53

   53 var_dec: ID $@16 . PARENTESIS_I CTE_INT $@17 PARENTESIS_F

    PARENTESIS_I  desplazar e ir al estado 72


estado 54

   45 bloque_declaracion: DECVAR $@15 declaraciones ENDDEC .

    $default  reduce usando la regla 45 (bloque_declaracion)


estado 55

   46 declaraciones: declaraciones lista_id_y_tipo .

    $default  reduce usando la regla 46 (declaraciones)


estado 56

   49 lista_id_y_tipo: var_dec OP_DEC . tipodato

    INTEGER  desplazar e ir al estado 73
    FLOAT    desplazar e ir al estado 74
    STRING   desplazar e ir al estado 75

    tipodato  ir al estado 76


estado 57

   48 lista_id_y_tipo: var_dec COMA . lista_id_y_tipo

    ID  desplazar e ir al estado 32

    lista_id_y_tipo  ir al estado 77
    var_dec          ir al estado 35


estado 58

   26 condicion: OP_NOT comparacion .

    $default  reduce usando la regla 26 (condicion)


estado 59

   58 expresion: expresion . OP_SUM $@18 termino
   60          | expresion . OP_REST $@19 termino
   71 factor: PARENTESIS_I expresion . PARENTESIS_F

    OP_SUM        desplazar e ir al estado 66
    OP_REST       desplazar e ir al estado 67
    PARENTESIS_F  desplazar e ir al estado 78


estado 60

   74 between: BETWEEN $@22 . PARENTESIS_I ID $@23 COMA rango PARENTESIS_F

    PARENTESIS_I  desplazar e ir al estado 79


estado 61

   78 inlist: INLIST $@24 . PARENTESIS_I ID $@25 PUNTO_Y_COMA lista_expresiones PARENTESIS_F

    PARENTESIS_I  desplazar e ir al estado 80


estado 62

   19 iteracion: WHILE PARENTESIS_I condicion $@3 . PARENTESIS_F $@4 DO bloque $@5 ENDWHILE

    PARENTESIS_F  desplazar e ir al estado 81


estado 63

   29 and_or: OP_AND .

    $default  reduce usando la regla 29 (and_or)


estado 64

   30 and_or: OP_OR .

    $default  reduce usando la regla 30 (and_or)


estado 65

   25 condicion: comparacion and_or . $@8 comparacion

    $default  reduce usando la regla 24 ($@8)

    $@8  ir al estado 82


estado 66

   58 expresion: expresion OP_SUM . $@18 termino

    $default  reduce usando la regla 57 ($@18)

    $@18  ir al estado 83


estado 67

   60 expresion: expresion OP_REST . $@19 termino

    $default  reduce usando la regla 59 ($@19)

    $@19  ir al estado 84


estado 68

   31 comparacion: expresion COMPARADOR . expresion

    CTE_INT       desplazar e ir al estado 36
    CTE_FLOAT     desplazar e ir al estado 37
    CTE_STRING    desplazar e ir al estado 38
    ID            desplazar e ir al estado 39
    PARENTESIS_I  desplazar e ir al estado 41

    expresion  ir al estado 85
    termino    ir al estado 47
    factor     ir al estado 48


estado 69

   63 termino: termino OP_MULT . $@20 factor

    $default  reduce usando la regla 62 ($@20)

    $@20  ir al estado 86


estado 70

   65 termino: termino OP_DIV . $@21 factor

    $default  reduce usando la regla 64 ($@21)

    $@21  ir al estado 87


estado 71

   22 seleccion: IF $@6 PARENTESIS_I condicion . PARENTESIS_F $@7 DO resto ENDIF

    PARENTESIS_F  desplazar e ir al estado 88


estado 72

   53 var_dec: ID $@16 PARENTESIS_I . CTE_INT $@17 PARENTESIS_F

    CTE_INT  desplazar e ir al estado 89


estado 73

   54 tipodato: INTEGER .

    $default  reduce usando la regla 54 (tipodato)


estado 74

   55 tipodato: FLOAT .

    $default  reduce usando la regla 55 (tipodato)


estado 75

   56 tipodato: STRING .

    $default  reduce usando la regla 56 (tipodato)


estado 76

   49 lista_id_y_tipo: var_dec OP_DEC tipodato .

    $default  reduce usando la regla 49 (lista_id_y_tipo)


estado 77

   48 lista_id_y_tipo: var_dec COMA lista_id_y_tipo .

    $default  reduce usando la regla 48 (lista_id_y_tipo)


estado 78

   71 factor: PARENTESIS_I expresion PARENTESIS_F .

    $default  reduce usando la regla 71 (factor)


estado 79

   74 between: BETWEEN $@22 PARENTESIS_I . ID $@23 COMA rango PARENTESIS_F

    ID  desplazar e ir al estado 90


estado 80

   78 inlist: INLIST $@24 PARENTESIS_I . ID $@25 PUNTO_Y_COMA lista_expresiones PARENTESIS_F

    ID  desplazar e ir al estado 91


estado 81

   19 iteracion: WHILE PARENTESIS_I condicion $@3 PARENTESIS_F . $@4 DO bloque $@5 ENDWHILE

    $default  reduce usando la regla 17 ($@4)

    $@4  ir al estado 92


estado 82

   25 condicion: comparacion and_or $@8 . comparacion

    CTE_INT       desplazar e ir al estado 36
    CTE_FLOAT     desplazar e ir al estado 37
    CTE_STRING    desplazar e ir al estado 38
    ID            desplazar e ir al estado 39
    PARENTESIS_I  desplazar e ir al estado 41

    comparacion  ir al estado 93
    expresion    ir al estado 46
    termino      ir al estado 47
    factor       ir al estado 48


estado 83

   58 expresion: expresion OP_SUM $@18 . termino

    CTE_INT       desplazar e ir al estado 36
    CTE_FLOAT     desplazar e ir al estado 37
    CTE_STRING    desplazar e ir al estado 38
    ID            desplazar e ir al estado 39
    PARENTESIS_I  desplazar e ir al estado 41

    termino  ir al estado 94
    factor   ir al estado 48


estado 84

   60 expresion: expresion OP_REST $@19 . termino

    CTE_INT       desplazar e ir al estado 36
    CTE_FLOAT     desplazar e ir al estado 37
    CTE_STRING    desplazar e ir al estado 38
    ID            desplazar e ir al estado 39
    PARENTESIS_I  desplazar e ir al estado 41

    termino  ir al estado 95
    factor   ir al estado 48


estado 85

   31 comparacion: expresion COMPARADOR expresion .
   58 expresion: expresion . OP_SUM $@18 termino
   60          | expresion . OP_REST $@19 termino

    OP_SUM   desplazar e ir al estado 66
    OP_REST  desplazar e ir al estado 67

    $default  reduce usando la regla 31 (comparacion)


estado 86

   63 termino: termino OP_MULT $@20 . factor

    CTE_INT       desplazar e ir al estado 36
    CTE_FLOAT     desplazar e ir al estado 37
    CTE_STRING    desplazar e ir al estado 38
    ID            desplazar e ir al estado 39
    PARENTESIS_I  desplazar e ir al estado 41

    factor  ir al estado 96


estado 87

   65 termino: termino OP_DIV $@21 . factor

    CTE_INT       desplazar e ir al estado 36
    CTE_FLOAT     desplazar e ir al estado 37
    CTE_STRING    desplazar e ir al estado 38
    ID            desplazar e ir al estado 39
    PARENTESIS_I  desplazar e ir al estado 41

    factor  ir al estado 97


estado 88

   22 seleccion: IF $@6 PARENTESIS_I condicion PARENTESIS_F . $@7 DO resto ENDIF

    $default  reduce usando la regla 21 ($@7)

    $@7  ir al estado 98


estado 89

   53 var_dec: ID $@16 PARENTESIS_I CTE_INT . $@17 PARENTESIS_F

    $default  reduce usando la regla 52 ($@17)

    $@17  ir al estado 99


estado 90

   74 between: BETWEEN $@22 PARENTESIS_I ID . $@23 COMA rango PARENTESIS_F

    $default  reduce usando la regla 73 ($@23)

    $@23  ir al estado 100


estado 91

   78 inlist: INLIST $@24 PARENTESIS_I ID . $@25 PUNTO_Y_COMA lista_expresiones PARENTESIS_F

    $default  reduce usando la regla 77 ($@25)

    $@25  ir al estado 101


estado 92

   19 iteracion: WHILE PARENTESIS_I condicion $@3 PARENTESIS_F $@4 . DO bloque $@5 ENDWHILE

    DO  desplazar e ir al estado 102


estado 93

   25 condicion: comparacion and_or $@8 comparacion .

    $default  reduce usando la regla 25 (condicion)


estado 94

   58 expresion: expresion OP_SUM $@18 termino .
   63 termino: termino . OP_MULT $@20 factor
   65        | termino . OP_DIV $@21 factor

    OP_MULT  desplazar e ir al estado 69
    OP_DIV   desplazar e ir al estado 70

    $default  reduce usando la regla 58 (expresion)


estado 95

   60 expresion: expresion OP_REST $@19 termino .
   63 termino: termino . OP_MULT $@20 factor
   65        | termino . OP_DIV $@21 factor

    OP_MULT  desplazar e ir al estado 69
    OP_DIV   desplazar e ir al estado 70

    $default  reduce usando la regla 60 (expresion)


estado 96

   63 termino: termino OP_MULT $@20 factor .

    $default  reduce usando la regla 63 (termino)


estado 97

   65 termino: termino OP_DIV $@21 factor .

    $default  reduce usando la regla 65 (termino)


estado 98

   22 seleccion: IF $@6 PARENTESIS_I condicion PARENTESIS_F $@7 . DO resto ENDIF

    DO  desplazar e ir al estado 103


estado 99

   53 var_dec: ID $@16 PARENTESIS_I CTE_INT $@17 . PARENTESIS_F

    PARENTESIS_F  desplazar e ir al estado 104


estado 100

   74 between: BETWEEN $@22 PARENTESIS_I ID $@23 . COMA rango PARENTESIS_F

    COMA  desplazar e ir al estado 105


estado 101

   78 inlist: INLIST $@24 PARENTESIS_I ID $@25 . PUNTO_Y_COMA lista_expresiones PARENTESIS_F

    PUNTO_Y_COMA  desplazar e ir al estado 106


estado 102

   19 iteracion: WHILE PARENTESIS_I condicion $@3 PARENTESIS_F $@4 DO . bloque $@5 ENDWHILE

    ID          desplazar e ir al estado 6
    DECVAR      desplazar e ir al estado 7
    WHILE       desplazar e ir al estado 8
    IF          desplazar e ir al estado 9
    READ        desplazar e ir al estado 10
    WRITE       desplazar e ir al estado 11
    COMENTARIO  desplazar e ir al estado 12

    bloque              ir al estado 107
    lista_sentencias    ir al estado 14
    sentencia           ir al estado 15
    asignacion          ir al estado 16
    iteracion           ir al estado 17
    seleccion           ir al estado 18
    lectura             ir al estado 19
    escritura           ir al estado 20
    bloque_declaracion  ir al estado 21


estado 103

   22 seleccion: IF $@6 PARENTESIS_I condicion PARENTESIS_F $@7 DO . resto ENDIF

    ID          desplazar e ir al estado 6
    DECVAR      desplazar e ir al estado 7
    WHILE       desplazar e ir al estado 8
    IF          desplazar e ir al estado 9
    READ        desplazar e ir al estado 10
    WRITE       desplazar e ir al estado 11
    COMENTARIO  desplazar e ir al estado 12

    bloque              ir al estado 108
    lista_sentencias    ir al estado 14
    sentencia           ir al estado 15
    asignacion          ir al estado 16
    iteracion           ir al estado 17
    seleccion           ir al estado 18
    resto               ir al estado 109
    lectura             ir al estado 19
    escritura           ir al estado 20
    bloque_declaracion  ir al estado 21


estado 104

   53 var_dec: ID $@16 PARENTESIS_I CTE_INT $@17 PARENTESIS_F .

    $default  reduce usando la regla 53 (var_dec)


estado 105

   74 between: BETWEEN $@22 PARENTESIS_I ID $@23 COMA . rango PARENTESIS_F

    CORCHETE_I  desplazar e ir al estado 110

    rango  ir al estado 111


estado 106

   78 inlist: INLIST $@24 PARENTESIS_I ID $@25 PUNTO_Y_COMA . lista_expresiones PARENTESIS_F

    CORCHETE_I  desplazar e ir al estado 112

    lista_expresiones  ir al estado 113


estado 107

   19 iteracion: WHILE PARENTESIS_I condicion $@3 PARENTESIS_F $@4 DO bloque . $@5 ENDWHILE

    $default  reduce usando la regla 18 ($@5)

    $@5  ir al estado 114


estado 108

   32 resto: bloque .
   35      | bloque . $@9 ELSE $@10 bloque
   40      | bloque . $@11 ELSIF $@12 PARENTESIS_I condicion PARENTESIS_F $@13 bloque ELSE $@14 bloque

    ELSE      reduce usando la regla 33 ($@9)
    ELSIF     reduce usando la regla 36 ($@11)
    $default  reduce usando la regla 32 (resto)

    $@9   ir al estado 115
    $@11  ir al estado 116


estado 109

   22 seleccion: IF $@6 PARENTESIS_I condicion PARENTESIS_F $@7 DO resto . ENDIF

    ENDIF  desplazar e ir al estado 117


estado 110

   75 rango: CORCHETE_I . expresion PUNTO_Y_COMA expresion CORCHETE_F

    CTE_INT       desplazar e ir al estado 36
    CTE_FLOAT     desplazar e ir al estado 37
    CTE_STRING    desplazar e ir al estado 38
    ID            desplazar e ir al estado 39
    PARENTESIS_I  desplazar e ir al estado 41

    expresion  ir al estado 118
    termino    ir al estado 47
    factor     ir al estado 48


estado 111

   74 between: BETWEEN $@22 PARENTESIS_I ID $@23 COMA rango . PARENTESIS_F

    PARENTESIS_F  desplazar e ir al estado 119


estado 112

   79 lista_expresiones: CORCHETE_I . expresiones CORCHETE_F

    CTE_INT       desplazar e ir al estado 36
    CTE_FLOAT     desplazar e ir al estado 37
    CTE_STRING    desplazar e ir al estado 38
    ID            desplazar e ir al estado 39
    PARENTESIS_I  desplazar e ir al estado 41

    expresion    ir al estado 120
    termino      ir al estado 47
    factor       ir al estado 48
    expresiones  ir al estado 121


estado 113
